# kabuoji3DataReader

./: LICENSE  setup.cfg
Kabuoji3DataReader/io/: data.py
