[metadata]
name = kabuoji3DataReader
version = 0.0.1
url = https://github.com/sawadyrr5/kabuoji3DataReader
author = sawady
author_email = riskreturn5@gmail.com
license = file: LICENSE
description = Japanese Stock data download library.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
install_requires =
    numpy
    pandas
    pandas_datareader
    requests
zip_safe = False
packages = find: